--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
     <link rel="icon" type="image/png" href="./assets/icon.png" />
+    <script src="https://code.iconify.design/2/2.2.1/iconify.min.js"></script>
     <script src="./script.js" defer></script>
     <title>Desafio Google</title>
   </head>
@@ -56,17 +57,13 @@
     </main>
 
     <footer>
-      <ul class="footer-esquerda">
-        <li><a href="">rodape 1</a></li>
-        <li><a href="">rodape 2</a></li>
-        <li><a href="">rodape 3</a></li>
-        <li><a href="">rodape 4</a></li>
-      </ul>
-      <ul class="footer-direita">
-        <li><a href="">rodape 5</a></li>
-        <li><a href="">rodape 6</a></li>
-        <li><a href="">rodape 7</a></li>
-      </ul>
+      <div>
+        <span>Desenvolvido por</span>
+        <ul class="footer-list">
+          <li><a href="https://github.com/JuliaDosSantos"><span class="iconify-inline" data-icon="akar-icons:github-fill" data-width="36" data-height="36" color="black"></span></a>JuliaDosSantos</li>
+          <li><a href="https://github.com/rhuanvk"><span class="iconify-inline" data-icon="akar-icons:github-fill" data-width="36" data-height="36" color="black"></span></a>rhuanvk</li>
+          <li><a href="https://github.com/bSatierf"><span class="iconify-inline" data-icon="akar-icons:github-fill" data-width="36" data-height="36" color="black"></span></a>bSatierf</li>
+      </div>  
     </footer>
   </body>
 </html>
